# hik_robot_project

service_robot/ros_project/src/hik_robot_btree_test/: 0.avi  1.avi  2.avi  3.avi  CMakeLists.txt  package.xml
service_robot/ros_project/src/hik_robot_btree_test/msg/: HikRobotSetTaskMsg.msg
service_robot/ros_project/src/hik_robot_btree_test/scripts/: .xd_approach_main.py.swp  0.avi  1.avi  2.avi  3.avi  approach_task.py  module_actions.py  module_task_mng.py  module_voice_service.py  module_voice_service_test.py  task_approach.py  task_mng_module.py  task_patrol.py  test_approach.py  test_follow.py  test_patrol.py  xd_approach_main.py  xd_btree_ros.py  xd_patrol.py  xd_robot.py  xd_robot_sim.py  xd_test.py
service_robot/ros_project/src/hik_robot_btree_test/test/: hik_robot_android.py  hik_robot_main_service.py  protocol_sub_test.py  test_HikRobotPatrolSrv_server.py  test_approach_client.py  test_approach_server.py  test_follow_client.py  test_follow_server.py  test_patrol_topic.py  test_service.py  test_setpose_server.py  test_transfer_pub.py  test_transfer_server.py  test_transfer_sub.py  test_voice_action.py  test_voice_action_server.py  test_voice_out.py  test_voiceout_server.py
service_robot/ros_project/src/hik_robot_follow_test/: CMakeLists.txt  package.xml
service_robot/ros_project/src/hik_robot_follow_test/scripts/: .test_follow.py.swp  .xd_follow_main.py.swp  test_follow.py  xd_follow_main.py  xd_follow_test.py
service_robot/ros_project/src/hik_robot_nav_test/: CMakeLists.txt
service_robot/ros_project/src/hik_robot_nav_test/scripts/: .hik_robot_main_topic.py.swp  .test_task_topic.py.swp  .test_voice_out.py.swp  hik_robot_android.py  hik_robot_main_topic.py  test_task_topic.py
service_robot/ros_project/src/hik_robot_task/: CMakeLists.txt  package.xml
service_robot/ros_project/src/hik_robot_task/msg/: HikRobotFile.msg  HikRobotVoiceOut.msg
service_robot/ros_project/src/hik_robot_task/srv/: HikRobotApproachSrv.srv  HikRobotFileSrv.srv  HikRobotNavSrv.srv  HikRobotPatrolSrv.srv  HikRobotSetManPoseSrv.srv  HikRobotVoiceOutSrv.srv
service_robot/ros_project/src/hik_robot_test/: CMakeLists.txt  package.xml
service_robot/ros_project/src/hik_robot_test/msg/: .HikRobotSetTaskMsg.msg.swp
service_robot/ros_project/src/hik_robot_test/scripts/: hik_robot_main_topic.py  test_transfer_client.py  test_transfer_pub.py  test_transfer_server.py  test_transfer_sub.py  test_voice_out.py  test_voiceout_client.py
service_robot/ros_project/src/hik_robot_test/srv/: HikRobotStatusSrv.srv  HikRobotVoiceOutSrv.srv
service_robot/ros_project/src/hik_robot_voice/: CMakeLists.txt  package.xml
service_robot/ros_project/src/hik_robot_voice/action/: VoiceOutAc.action
service_robot/ros_project/src/hik_robot_voice/scripts/: module_task_mng.py  module_voice_service.py  task_patrol.py  xd_robot_sim.py
service_robot/ros_project/src/hik_robot_voice/test/: protocol_pub_test.py  protocol_sub_test_cmd  test_HikRobotPatrolSrv_client.py  test_setpose_client.py  test_transfer_client.py
service_robot/ros_project/src/main/scripts/: RobotBtTask.py  RobotDamon.py  RobotHw.py  RobotTaskMng.py  main.py
service_robot/ros_project/src/pi_trees_lib/: cscope.files  cscope.in.out  cscope.out  cscope.po.out  tags
service_robot/ros_project/src/pi_trees_lib/examples/: patrol_tree.py  xd_btree_example.py
service_robot/ros_project/src/pi_trees_lib/src/pi_trees_lib/: pi_trees_lib.py
service_robot/ros_project/src/pi_trees_ros/: cscope.files  cscope.in.out  cscope.out  cscope.po.out  tags
service_robot/ros_project/src/pi_trees_ros/src/pi_trees_ros/: pi_trees_ros.py
service_robot/ros_project/src/rosjava_hikrobot_msgs/: CMakeLists.txt  package.xml
