<?xml version="1.0"?>
<package>
  <name>hik_robot_task</name>
  <version>0.3.0</version>
  <description>
    hikrobottask for rosjava.
  </description>
  <url type="website">http://ros.org/wiki/hik_robot_task</url>
  <url type="repository">https://github.com/rosjava/hik_robot_task</url>
  <url type="bugtracker">https://github.com/rosjava/hik_robot_task/issues</url>
  <maintainer email="d.stonier@gmail.com">Daniel Stonier</maintainer>
  <author>Damon Kohler</author>
  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>move_base_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>move_base_msgs</run_depend>

</package>

